src/test/deca/context/invalid/operations/unary/invalid_unary_op_not_string.deca
// Description:
//    test invalid unary operation NOT with string
//    Test rule 3.37
//
// [Begin Result]
//invalid_unary_op_not_string.deca:13:10: Unsupported unary operation '!' with type string. Type must be boolean. (Rule 3.37)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print(! "3");
}